# gemoni

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: .travis.yml
ext/: CMakeLists.txt
ext/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_bgfx.cpp
ext/imwidgets/: CMakeLists.txt  imHotKey.h
ext/stb/: CMakeLists.txt  stb.cpp
src/: CMakeLists.txt
src/model/: Camera.cpp  Camera.h  GeometryTypes.cpp  GeometryTypes.h  MetaNodes.cpp  ParameterBlock.cpp  Utils.cpp  Utils.h
src/ui/: CMakeLists.txt  GraphEditor.cpp  GraphEditor.h  Style.cpp  Style.h  UIMain.cpp  UIMain.h
